gcc/testsuite/gdc.test/compilable/checkimports3.d
/*
REQUIRED_ARGS: -de
EXTRA_FILES: imports/checkimports3a.d imports/checkimports3b.d imports/checkimports3c.d
*/
import imports.checkimports3a;
import imports.checkimports3b;
import imports.checkimports3c;

void test()
{
    foo();
}
